--- a/footer.css
+++ b/footer.css
@@ -90,6 +90,7 @@
                                     position: absolute;
                                     width: auto;
                                     height: auto;
+                                    font-family: 'Rubik', sans-serif;
                                     font-style: normal;
                                     font-weight: 600;
                                     font-size: 21px;
