--- a/web/css/Footer.css
+++ b/web/css/Footer.css
@@ -1,4 +1,4 @@
-                                footer {
+                                .desktop {
                                     background-color: #1E1E1E;
                                     width: 100%;
                                 }
