--- a/web/css/Footer.css
+++ b/web/css/Footer.css
@@ -20,8 +20,7 @@
                                 }
                                 
                                 h1 {
-                                    margin-left: 37px;
-                                    font-style: normal;
+                                    margin-left: 32.47px;
                                     font-family: 'Inter', sans-serif;
                                     font-weight: 700;
                                     font-size: 30px;
@@ -34,23 +33,26 @@
                                 
                                 h4 {
                                     color: #FFFFFF;
-                                    font-family: 'Inter', sans-serif;
+                                    font-family: 'Rubik', sans-serif;
                                     margin-right: none;
+                                    font-weight: 500;
+                                    font-size: 20px;
+                                    line-height: 24px;
                                 }
                                 
                                 .flex {
                                     padding: 40px;
                                     display: flex;
                                     flex-direction: row;
-                                    width: 700px;
-                                    left: 50px;
+                                    width: fit-content;
+                                    /* left: 50px; */
                                 }
                                 
                                 .row1,
                                 .row2,
                                 .row3,
                                 .row4 {
-                                    margin: 20px;
+                                    padding: 20px;
                                     display: flex;
                                     flex-direction: column;
                                     font-size: 20px;
@@ -59,11 +61,10 @@
                                 a {
                                     color: #AFAFAF;
                                     text-decoration: none;
-                                    font-family: 'Inter', sans-serif;
-                                    font-style: normal;
-                                    font-weight: 600;
-                                    font-size: 20px;
-                                    line-height: 30px;
+                                    font-family: 'Manrope', sans-serif;
+                                    font-weight: 700;
+                                    font-size: 17px;
+                                    line-height: 24px;
                                 }
                                 
                                 .form {
@@ -83,16 +84,14 @@
                                 
                                 .image2 {
                                     position: absolute;
-                                    width: 20px;
+                                    width: 35px;
                                 }
                                 
                                 .newsletter {
                                     position: absolute;
                                     width: auto;
                                     height: auto;
-                                    font-style: normal;
-                                    font-weight: 600;
-                                    font-size: 21px;
+                                    margin-top: 20.57px;
                                     line-height: 30px;
                                     left: 60%;
                                     top: 25%;
@@ -133,13 +132,66 @@
                                     text-align: center;
                                 }
                                 
+                                .footer-space {
+                                    width: 100%;
+                                    height: 0px;
+                                    border: .5px solid #5C5C5A;
+                                }
+                                
+                                .footer-last1 {
+                                    width: 369px;
+                                    height: 48px;
+                                }
+                                
+                                .white {
+                                    margin: 0px;
+                                    padding-left: 60px;
+                                    font-family: 'Manrope', sans-serif;
+                                    font-style: normal;
+                                    font-weight: 700;
+                                    font-size: 15px;
+                                    line-height: 24px;
+                                    letter-spacing: 0.005em;
+                                    color: #FFFFFF;
+                                }
+                                
+                                .white1 {
+                                    display: flex;
+                                    flex-direction: column;
+                                    width: max-content;
+                                }
+                                
+                                .footer-last2 {
+                                    width: 277px;
+                                    height: 26px;
+                                }
+                                
+                                .black {
+                                    position: absolute;
+                                    right: 8.5%;
+                                    top: 53%;
+                                    font-style: normal;
+                                    font-weight: 400;
+                                    font-size: 17px;
+                                    line-height: 150%;
+                                    color: #777777;
+                                    text-align: center;
+                                    letter-spacing: 0.005em;
+                                    order: 1;
+                                }
+                                
+                                .white2 {
+                                    display: flex;
+                                    justify-content: flex-end;
+                                }
+                                
                                 @media screen and (max-width: 650px) {
                                     .desktop {
                                         display: none;
                                     }
                                 }
                                 
-                                @media screen and (max-width: 1496px) {
+                                @media screen and (max-width: 1500px) {
                                     .box1 {
                                         position: absolute;
                                         top: 250px;
@@ -152,10 +204,37 @@
                                     }
                                 }
                                 
+                                @media screen and (max-width: 927px) {
+                                    .box1 {
+                                        font-size: small;
+                                    }
+                                    .button1 {
+                                        font-size: medium;
+                                    }
+                                }
+                                
+                                @media (min-width: 999px) and (max-width: 1175px) {
+                                    .row1,
+                                    .row2,
+                                    .row3,
+                                    .row4 {
+                                        font-size: medium;
+                                        padding: 5px;
+                                        padding-top: 20px;
+                                    }
+                                }
+                                
                                 @media screen and (max-width: 999px) {
                                     .flex {
                                         display: flex;
                                         flex-direction: column;
                                         width: 40%;
+                                    }
+                                    .black {
+                                        font-size: small;
+                                        top: 148%;
+                                    }
+                                    .white {
+                                        font-size: small;
                                     }
                                 }
