--- a/web/home/home.css
+++ b/web/home/home.css
@@ -97,4 +97,72 @@ h4 {
 
 h1 {
     font-family: "Rubik", sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 50px;
+    line-height: 59px;
+}
+
+.flex-4 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.flex-5 {
+    display: flex;
+    flex-direction: row;
+    margin-top: 60px;
+}
+
+.box1 {
+    align-items: center;
+    width: 398px;
+    height: 400px;
+    border-radius: 12px;
+    padding: 24px;
+    align-items: flex-start;
+    background: #FFFFFF;
+    gap: 37px;
+    margin-right: 50px;
+}
+
+.p1 {
+    font-family: 'Manrope', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 17px;
+    line-height: 150%;
+    letter-spacing: 0.005em;
+    word-wrap: break-word;
+}
+
+.flex-internal {
+    display: flex;
+    flex-direction: row;
+}
+
+a {
+    font-family: 'Manrope', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 19px;
+    line-height: 28px;
+    letter-spacing: 0.005em;
+    text-decoration-line: underline;
+    color: #f45725;
+    margin-left: 820px;
+}
+
+.ArrowDiv {
+    margin-left: 8px;
+    margin-top: 5px;
+    color: #f45725;
+}
+
+.corousal {
+    width: 100%;
+    height: 759px;
+    color: #FFFFFF;
 }
