--- a/web/css/mob.css
+++ b/web/css/mob.css
@@ -1,4 +1,4 @@
-.mob {
+/* .mob {
     display: none;
 }
 
@@ -633,4 +633,4 @@ form {
         width: 26%;
         text-align: center;
     }
-}
+} */
