--- a/web/home/home.css
+++ b/web/home/home.css
@@ -17,6 +17,36 @@
     width: 100%;
 }
 
+.flex-0 {
+    display: flex;
+    flex-direction: column;
+    margin-left: 30px;
+}
+
+h3 {
+    width: 832px;
+    height: 160px;
+    font-family: "Rubik", sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 50px;
+    line-height: 80px;
+    letter-spacing: 0.005em;
+    color: #FFFFFF;
+}
+
+.p4 {
+    width: 817px;
+    height: 80px;
+    font-family: 'Manrope', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 40px;
+    letter-spacing: 0.005em;
+    color: #FFFFFF;
+}
+
 .upper2 {
     background-image: url(./homeImage/image-23.png);
     height: 735px;
@@ -159,10 +189,4 @@ a {
     margin-left: 8px;
     margin-top: 5px;
     color: #f45725;
-}
-
-.corousal {
-    width: 100%;
-    height: 759px;
-    background-color: #FFFFFF;
 }
