--- a/web/home/corousal.css
+++ b/web/home/corousal.css
@@ -1,23 +1,76 @@
-.corousal {
-    width: 100%;
-    height: 759px;
-    background-color: #FFFFFF;
-}
-
-.fllex-7 {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-}
-
-.corousal-1 {
-    margin-top: 90px;
-    height: 250px;
-    width: 100%;
-    background-color: red;
-}
-
-.p5 {
-    margin-top: 90px;
-}
+    .corousal {
+        width: 100%;
+        height: 759px;
+        background-color: #FFFFFF;
+        justify-content: center;
+        text-align: center;
+    }
+    
+    .fllex-7 {
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .corousal-1 {
+        height: 250px;
+        width: 100%;
+        background-color: red;
+        margin-top: 90px;
+    }
+    
+    .p5 {
+        margin-top: 90px;
+        width: 960px;
+        height: 90px;
+        font-family: 'Manrope', sans-serif;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 150%;
+        text-align: center;
+        letter-spacing: 0.005em;
+    }
+    
+    .card-body {
+        display: none;
+    }
+    
+    .loading-carousel {
+        text-align: center;
+    }
+    
+    .card {
+        border: none;
+        width: 250px;
+        height: 250px;
+    }
+    
+    .L-carousel-loading {
+        color: #f45725;
+        font-style: normal;
+        font-family: 'Rubik', sans-serif;
+        font-weight: 700;
+    }
+    
+    .o-carousel-loading {
+        font-style: normal;
+        font-family: 'Rubik', sans-serif;
+        font-weight: 400;
+    }
+    
+    .img-fluid {
+        border-radius: 10px;
+    }
+    
+    .leftarr {
+        float: left;
+        width: fit-content;
+        margin: 10px;
+    }
+    
+    .rightarr {
+        margin: 10px;
+        float: right;
+        width: 10px;
+        border-radius: 100px;
+    }
