--- a/web/home/mob/mobhome.css
+++ b/web/home/mob/mobhome.css
@@ -188,3 +188,36 @@
     letter-spacing: 0.005em;
     color: #000000;
 }
+
+.mobcorousal {
+    width: 100%;
+    height: 410px;
+}
+
+.moblower {
+    background-image: url(/web/home/homeImage/Rectangle-89.png);
+    width: 100%;
+    height: 805px;
+}
+
+.mobflex-6 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    width: 275px;
+}
+
+.mobp2 {
+    width: 324px;
+    height: 63px;
+    font-family: 'Manrope', sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 150%;
+    /* or 21px */
+    letter-spacing: 0.005em;
+    /* White */
+    color: #FFFFFF;
+}
