--- a/web/home/mob/mobhome.css
+++ b/web/home/mob/mobhome.css
@@ -195,7 +195,7 @@
 }
 
 .moblower {
-    background-image: url(/web/home/homeImage/Rectangle-89.png);
+    background-color: #000000;
     width: 100%;
     height: 805px;
 }
@@ -203,9 +203,9 @@
 .mobflex-6 {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: flex-start;
-    width: 275px;
+    width: 335px;
+    margin-left: 20px;
 }
 
 .mobp2 {
@@ -216,8 +216,69 @@
     font-weight: 500;
     font-size: 14px;
     line-height: 150%;
-    /* or 21px */
     letter-spacing: 0.005em;
-    /* White */
+    color: #FFFFFF;
+    margin-bottom: 30px;
+}
+
+.mobflex-lower-1 {
+    display: flex;
+    flex-direction: column;
+    margin-top: 60px;
+}
+
+.mobflex-lower-2 {
+    display: flex;
+    flex-direction: column;
+}
+
+.mobcol-1 {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    height: 100px;
+}
+
+.mobcol-2 {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.mobfname1,
+.mobfemail {
+    width: 335px;
+    height: 40px;
+    background: #FFFFFF;
+    border: 2px solid #F45725;
+    border-radius: 6px;
+    margin-bottom: 30px;
+    color: #000000;
+}
+
+.mobfmessage {
+    width: 335px;
+    height: 200px;
+    background: #FFFFFF;
+    color: #000000;
+    border: 2px solid #F45725;
+    border-radius: 6px;
+    margin-bottom: 30px;
+}
+
+.mobsubmit1 {
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    gap: 10px;
+    width: 335px;
+    height: 60px;
+    background: #F45725;
+    border-radius: 6px;
+    margin-bottom: 60px;
+    font-family: "Rubik", sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
     color: #FFFFFF;
 }
