--- a/web/home/corousal.css
+++ b/web/home/corousal.css
@@ -1,76 +1,145 @@
-    .corousal {
-        width: 100%;
-        height: 759px;
-        background-color: #FFFFFF;
-        justify-content: center;
-        text-align: center;
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
+.corousal {
+    width: 100%;
+    height: 759px;
+    background-color: #FFFFFF;
+    justify-content: center;
+    text-align: center;
+}
+
+.fllex-7 {
+    display: flex;
+    flex-direction: column;
+}
+
+.corousal-1 {
+    height: 250px;
+    width: 100%;
+    margin-top: 90px;
+}
+
+.p5 {
+    margin-top: 90px;
+    width: 960px;
+    height: 90px;
+    font-family: 'Manrope', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 150%;
+    text-align: center;
+    letter-spacing: 0.005em;
+}
+
+.img-fluid {
+    margin: 10px;
+    border-radius: 30px;
+}
+
+.corousal-1 {
+    font-family: 'Montserrat', sans-serif;
+    color: #111;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+ :root {
+    --marquee-width: 120vw;
+    --marquee-height: 30vh;
+    /* --marquee-elements: 12; */
+    /* defined with JavaScript */
+    --marquee-elements-displayed: 5;
+    --marquee-element-width: calc(var(--marquee-width) / var(--marquee-elements-displayed));
+    --marquee-animation-duration: calc(var(--marquee-elements) * 1s);
+}
+
+.marquee {
+    width: var(--marquee-width);
+    height: var(--marquee-height);
+    color: #eee;
+    overflow: hidden;
+    position: relative;
+}
+
+
+/* .marquee:before,
+    .marquee:after {
+        position: absolute;
+        top: 0;
+        width: 10rem;
+        height: 100%;
+        content: "";
+        z-index: 1;
     }
-    
-    .fllex-7 {
+
+    .marquee:before {
+        left: 0;
+    }
+
+    .marquee:after {
+        right: 0;
+    } */
+
+.marquee-content {
+    list-style: none;
+    height: 100%;
+    display: flex;
+}
+
+.marquee-content-test {
+    display: flex;
+}
+
+.animation-marquee {
+    animation: scrolling var(--marquee-animation-duration) linear infinite;
+}
+
+.marquee-content:hover {
+    animation-play-state: paused;
+}
+
+@keyframes scrolling {
+    0% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(-50%);
+    }
+}
+
+
+/* .marquee-content li {
         display: flex;
-        flex-direction: column;
-    }
-    
-    .corousal-1 {
-        height: 250px;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        flex-shrink: 0;
+        width: var(--marquee-element-width);
+        max-height: 100%;
+        font-size: calc(var(--marquee-height)*3/4);
+        white-space: nowrap;
+
+    } */
+
+
+/* .marquee-content li img {
         width: 100%;
-        background-color: red;
-        margin-top: 90px;
+         height: 100%;
+        border: 2px solid #eee;
+    } */
+
+@media (max-width: 600px) {
+    html {
+        font-size: 12px;
     }
-    
-    .p5 {
-        margin-top: 90px;
-        width: 960px;
-        height: 90px;
-        font-family: 'Manrope', sans-serif;
-        font-style: normal;
-        font-weight: 400;
-        font-size: 20px;
-        line-height: 150%;
-        text-align: center;
-        letter-spacing: 0.005em;
+     :root {
+        --marquee-width: 100vw;
+        --marquee-height: 16vh;
+        --marquee-elements-displayed: 3;
     }
-    
-    .card-body {
-        display: none;
-    }
-    
-    .loading-carousel {
-        text-align: center;
-    }
-    
-    .card {
-        border: none;
-        width: 250px;
-        height: 250px;
-    }
-    
-    .L-carousel-loading {
-        color: #f45725;
-        font-style: normal;
-        font-family: 'Rubik', sans-serif;
-        font-weight: 700;
-    }
-    
-    .o-carousel-loading {
-        font-style: normal;
-        font-family: 'Rubik', sans-serif;
-        font-weight: 400;
-    }
-    
-    .img-fluid {
-        border-radius: 10px;
-    }
-    
-    .leftarr {
-        float: left;
-        width: fit-content;
-        margin: 10px;
-    }
-    
-    .rightarr {
-        margin: 10px;
-        float: right;
-        width: 10px;
-        border-radius: 100px;
-    }
+    /* .marquee:before,
+        .marquee:after {
+            width: 5rem;
+        } */
+}
