--- a/web/home/mob/mobhome.css
+++ b/web/home/mob/mobhome.css
@@ -189,11 +189,6 @@
     color: #000000;
 }
 
-.mobcorousal {
-    width: 100%;
-    height: 410px;
-}
-
 .moblower {
     background-color: #000000;
     width: 100%;
@@ -281,4 +276,38 @@
     font-weight: 700;
     font-size: 20px;
     color: #FFFFFF;
+}
+
+.mobcorousal {
+    width: 100%;
+    height: 410px;
+    align-items: center;
+}
+
+.mobflex-7 {
+    display: flex;
+    flex-direction: column;
+}
+
+.mobcoro-img {
+    width: auto;
+    height: 80px;
+    margin-top: 30px;
+}
+
+.mobp3 {
+    width: 335px;
+    height: 126px;
+    font-family: 'Manrope', sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 150%;
+    text-align: center;
+    letter-spacing: 0.005em;
+    color: #0F0E0E;
+    margin-top: 30px;
+    margin-bottom: 60px;
+    align-items: center;
+    margin-left: 20px;
 }
