--- a/CSS/home.css
+++ b/CSS/home.css
@@ -54,12 +54,64 @@
 .WhyHowWhatDiv {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    width: 100%;
+    margin-bottom: 45px;
+    background-color: transparent;
+    margin-top: -30px;
 }
 
 .whyDiv,
 .HowDiv,
 .WhatDiv {
-    width: 30%;
+    padding: 20px 20px 41px 20px;
+    width: 26%;
     background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 40px;
+}
+
+.whyDiv {
+    margin-left: 30px;
+}
+
+.WhatDiv {
+    margin-right: 30px;
+}
+
+.why,
+.how,
+.what {
+    background-color: transparent;
+}
+
+.questionpTag {
+    background-color: transparent;
+    color: black;
+    font-family: "Rubik", sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 36px;
+    margin: 30px 0px;
+}
+
+.questionpTag span,
+.CardDesPTag span {
+    background-color: transparent;
+    color: #f45725;
+}
+
+.CardDesPTag {
+    background-color: transparent;
+    font-family: "Manrope", sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 17px;
+    line-height: 150%;
+    text-align: center;
+    letter-spacing: 0.005em;
+    color: #000000;
 }
