--- a/CSS/home.css
+++ b/CSS/home.css
@@ -134,6 +134,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-bottom: 135px;
 }
 
 .believeCenterCol {
