--- a/CSS/home.css
+++ b/CSS/home.css
@@ -102,7 +102,9 @@
 .CardDesPTag span,
 .BelievePTag span,
 .believeCenterCol p span,
-.userName {
+.userName,
+.Seeall,
+.Seeall span {
     background-color: transparent;
     color: #f45725;
 }
@@ -228,4 +230,25 @@
     line-height: 20px;
     letter-spacing: 0.005em;
     color: #000000;
+}
+
+.Seeall {
+    font-family: "Manrope", sans-serif;
+    font-style: normal;
+    color: #f45725;
+    float: right;
+    margin-right: 15%;
+}
+
+#Seeall {
+    font-weight: 700;
+    font-size: 19px;
+    line-height: 28px;
+    letter-spacing: 0.005em;
+    text-decoration-line: underline;
+}
+
+.Seeall span {
+    font-size: 20px;
+    font-weight: 500;
 }
