--- a/CSS/home.css
+++ b/CSS/home.css
@@ -262,7 +262,7 @@
 }
 
 .WeWorkWith {
-    padding-top: 90px;
+    padding: 90px 0px;
     background-color: #fff;
 }
 
@@ -276,4 +276,53 @@
     line-height: 59px;
     color: #0f0e0e;
     text-align: center;
+}
+
+.carousel-cell {
+    width: 100%;
+}
+
+.carousel-cell:before {
+    display: block;
+}
+
+.corousal {
+    background-color: transparent;
+    margin-bottom: 90px;
+}
+
+.cardMain {
+    width: 250px;
+    height: 250px;
+    border-radius: 24px;
+    background-color: #fff;
+    /* margin-left: 10px; */
+}
+
+.cardImgTag {
+    width: 100%;
+    height: 100%;
+    border-radius: 24px;
+    background-color: #fff;
+}
+
+.pTagDivWork {
+    background-color: transparent;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.workptagDes {
+    background-color: transparent;
+    width: 60%;
+    font-family: "Manrope", sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 150%;
+    text-align: center;
+    letter-spacing: 0.005em;
+    text-align: center;
+    color: #000;
 }
